@@ -1,3 +1,14 @@
+2021-07-20  Aakash Jain  <aakash_jain@apple.com>
+
+        EWS should send email notification when a bot goes out of disk space
+        https://bugs.webkit.org/show_bug.cgi?id=216489
+
+        Reviewed by Ryan Haddad.
+
+        * CISupport/ews-build/steps.py:
+        (CleanUpGitIndexLock.start):
+        (CleanUpGitIndexLock.send_email_for_git_issue):
+
 2021-07-20  Víctor Manuel Jáquez Leal  <vjaquez@igalia.com>
 
         Update myself (vjaquez) as committer in contributors.json
